--- a/src/main/resources/org/shevliakov/carpatymilitaryaccounting/view/main-view.fxml
+++ b/src/main/resources/org/shevliakov/carpatymilitaryaccounting/view/main-view.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Text?>
 
 <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.shevliakov.carpatymilitaryaccounting.controller.MainController">
   <Tab text="Облік працівників">
@@ -29,7 +30,8 @@
         <GridPane.margin>
           <Insets left="10.0" right="10.0" />
         </GridPane.margin>
-        <ChoiceBox prefWidth="150.0" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Рік народження" />
+        <ChoiceBox fx:id="birthYearChoiceBox" prefWidth="150.0" />
         <ChoiceBox prefWidth="150.0" />
         <TextField fx:id="nameSearchTextField" prefHeight="26.0" prefWidth="200.0" promptText="Ім'я" />
       </HBox>
