--- a/src/main/resources/org/shevliakov/carpatymilitaryaccounting/view/edit-worker-info-view.fxml
+++ b/src/main/resources/org/shevliakov/carpatymilitaryaccounting/view/edit-worker-info-view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -8,7 +9,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="550.0" spacing="10.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.shevliakov.carpatymilitaryaccounting.controller.EditWorkerInfoController">
+<?import javafx.scene.control.ChoiceBox?>
+<VBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="500.0" spacing="10.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.shevliakov.carpatymilitaryaccounting.controller.EditWorkerInfoController">
   <HBox alignment="BASELINE_RIGHT" prefWidth="200.0">
     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="ПІБ">
       <HBox.margin>
@@ -26,7 +28,7 @@
         <Insets right="5.0" />
       </HBox.margin>
     </Text>
-    <TextField fx:id="RankTextField" prefWidth="200.0" />
+    <ChoiceBox fx:id="RankChoiceBox" prefWidth="200.0" />
     <VBox.margin>
       <Insets left="40.0" right="40.0" />
     </VBox.margin>
@@ -70,7 +72,7 @@
         <Insets right="5.0" />
       </HBox.margin>
     </Text>
-    <TextField fx:id="TrainingTextField" prefWidth="200.0" />
+    <ChoiceBox fx:id="TrainingChoiceBox" prefWidth="200.0" />
     <VBox.margin>
       <Insets left="40.0" right="40.0" />
     </VBox.margin>
@@ -103,9 +105,16 @@
         <Insets right="5.0" />
       </HBox.margin>
     </Text>
-    <TextArea fx:id="IdInfoTextArea" prefWidth="200.0" />
+    <TextArea fx:id="IdInfoTextArea" prefWidth="200.0" wrapText="true" />
     <VBox.margin>
       <Insets left="40.0" right="40.0" />
     </VBox.margin>
   </HBox>
+   <HBox alignment="CENTER" layoutX="50.0" layoutY="338.0" prefWidth="200.0" spacing="10.0">
+      <children>
+         <Button fx:id="UpdateButton" mnemonicParsing="false" onAction="#onUpdateButtonClicked" prefWidth="80.0" text="Оновити" />
+         <Button fx:id="DeleteButton" mnemonicParsing="false" onAction="#onDeleteButtonClicked" prefWidth="80.0" text="Видалити" textFill="RED" />
+         <Button fx:id="CancelButton" layoutX="175.0" layoutY="10.0" mnemonicParsing="false" onAction="#onCancelButtonClicked" prefWidth="80.0" text="Скасувати" />
+      </children>
+   </HBox>
 </VBox>
