--- a/src/main/resources/org/shevliakov/carpatymilitaryaccounting/view/main-view.fxml
+++ b/src/main/resources/org/shevliakov/carpatymilitaryaccounting/view/main-view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -21,7 +22,7 @@
       </columnConstraints>
       <rowConstraints>
         <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="60.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="440.00000381469727" minHeight="10.0" prefHeight="396.60002441406243" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
       </rowConstraints>
       <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
         <opaqueInsets>
@@ -35,8 +36,9 @@
         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Звання" />
         <ChoiceBox fx:id="rankChoiceBox" prefWidth="150.0" />
         <TextField fx:id="nameSearchTextField" prefHeight="26.0" prefWidth="200.0" promptText="Ім'я" />
+            <Button mnemonicParsing="false" onAction="#onRefreshButtonClicked" text="Оновити" />
       </HBox>
-      <TableView fx:id="workersTableView" GridPane.rowIndex="1">
+      <TableView fx:id="workersTableView" prefHeight="490.0" prefWidth="1150.0" GridPane.rowIndex="1">
         <columns>
           <TableColumn fx:id="rankColumn" prefWidth="110.0" text="Військове звання" />
           <TableColumn fx:id="fullNameColumn" prefWidth="110.0" text="Повне ім'я" />
