--- a/src/main/resources/org/shevliakov/carpatymilitaryaccounting/view/main-view.fxml
+++ b/src/main/resources/org/shevliakov/carpatymilitaryaccounting/view/main-view.fxml
@@ -4,51 +4,59 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
-
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1150.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.shevliakov.carpatymilitaryaccounting.controller.MainController">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+  prefHeight="700.0" prefWidth="1150.0" tabClosingPolicy="UNAVAILABLE"
+  xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
+  fx:controller="org.shevliakov.carpatymilitaryaccounting.controller.MainController">
   <Tab text="Облік працівників">
     <GridPane prefHeight="471.0" prefWidth="617.0">
       <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
       </columnConstraints>
       <rowConstraints>
-        <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="60.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="60.0"
+          vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
       </rowConstraints>
       <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
         <opaqueInsets>
-          <Insets />
+          <Insets/>
         </opaqueInsets>
         <GridPane.margin>
-          <Insets left="10.0" right="10.0" />
+          <Insets left="10.0" right="10.0"/>
         </GridPane.margin>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Рік народження" />
-        <ChoiceBox fx:id="birthYearChoiceBox" prefWidth="150.0" />
-        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Звання" />
-        <ChoiceBox fx:id="rankChoiceBox" prefWidth="150.0" />
-        <TextField fx:id="nameSearchTextField" prefHeight="26.0" prefWidth="200.0" promptText="Ім'я" />
-            <Button mnemonicParsing="false" onAction="#onRefreshButtonClicked" text="Оновити" />
+        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Рік народження"/>
+        <ChoiceBox fx:id="birthYearChoiceBox" prefWidth="150.0"/>
+        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Звання"/>
+        <ChoiceBox fx:id="rankChoiceBox" prefWidth="150.0"/>
+        <TextField fx:id="nameSearchTextField" prefHeight="26.0" prefWidth="200.0"
+          promptText="Ім'я"/>
+        <Button mnemonicParsing="false" onAction="#onRefreshButtonClicked" text="Оновити"/>
+        <Button mnemonicParsing="false" onAction="#onAddWorkerButtonClicked" text="Додати працівника"/>
       </HBox>
-      <TableView fx:id="workersTableView" prefHeight="490.0" prefWidth="1150.0" GridPane.rowIndex="1">
+      <TableView fx:id="workersTableView" prefHeight="490.0" prefWidth="1150.0"
+        GridPane.rowIndex="1">
         <columns>
-          <TableColumn fx:id="rankColumn" prefWidth="110.0" text="Військове звання" />
-          <TableColumn fx:id="fullNameColumn" prefWidth="110.0" text="Повне ім'я" />
-          <TableColumn fx:id="birthDateColumn" prefWidth="110.0" text="Дата народження" />
-          <TableColumn fx:id="registrationNumberColumn" prefWidth="110.0" text="Реєстраційний номер/РНОКПП" />
-          <TableColumn fx:id="militarySpecialtyColumn" prefWidth="110.0" text="Військово-облікова спеціальність" />
-          <TableColumn fx:id="trainingColumn" prefWidth="110.0" text="Склад" />
-          <TableColumn fx:id="accountingCategoryColumn" prefWidth="110.0" text="Категорія обліку" />
-          <TableColumn fx:id="degreeColumn" prefWidth="110.0" text="Освіта" />
-          <TableColumn fx:id="idInfoColumn" prefWidth="110.0" text="Реквізити паспорта" />
+          <TableColumn fx:id="rankColumn" prefWidth="110.0" text="Військове звання"/>
+          <TableColumn fx:id="fullNameColumn" prefWidth="110.0" text="Повне ім'я"/>
+          <TableColumn fx:id="birthDateColumn" prefWidth="110.0" text="Дата народження"/>
+          <TableColumn fx:id="registrationNumberColumn" prefWidth="110.0"
+            text="Реєстраційний номер/РНОКПП"/>
+          <TableColumn fx:id="militarySpecialtyColumn" prefWidth="110.0"
+            text="Військово-облікова спеціальність"/>
+          <TableColumn fx:id="trainingColumn" prefWidth="110.0" text="Склад"/>
+          <TableColumn fx:id="accountingCategoryColumn" prefWidth="110.0" text="Категорія обліку"/>
+          <TableColumn fx:id="degreeColumn" prefWidth="110.0" text="Освіта"/>
+          <TableColumn fx:id="idInfoColumn" prefWidth="110.0" text="Реквізити паспорта"/>
         </columns>
       </TableView>
     </GridPane>
