--- a/src/main/resources/org/shevliakov/carpatymilitaryaccounting/view/main-view.fxml
+++ b/src/main/resources/org/shevliakov/carpatymilitaryaccounting/view/main-view.fxml
@@ -40,8 +40,9 @@
         <ChoiceBox fx:id="rankChoiceBox" prefWidth="150.0"/>
         <TextField fx:id="nameSearchTextField" prefHeight="26.0" prefWidth="200.0"
           promptText="Ім'я"/>
-        <Button mnemonicParsing="false" onAction="#onRefreshButtonClicked" text="Оновити"/>
-        <Button mnemonicParsing="false" onAction="#onAddWorkerButtonClicked" text="Додати працівника"/>
+        <Button mnemonicParsing="false" onAction="#onRefreshWorkersButtonClicked" text="Оновити"/>
+        <Button mnemonicParsing="false" onAction="#onAddWorkerButtonClicked"
+          text="Додати працівника"/>
       </HBox>
       <TableView fx:id="workersTableView" prefHeight="490.0" prefWidth="1150.0"
         GridPane.rowIndex="1">
@@ -57,6 +58,37 @@
           <TableColumn fx:id="accountingCategoryColumn" prefWidth="110.0" text="Категорія обліку"/>
           <TableColumn fx:id="degreeColumn" prefWidth="110.0" text="Освіта"/>
           <TableColumn fx:id="idInfoColumn" prefWidth="110.0" text="Реквізити паспорта"/>
+        </columns>
+      </TableView>
+    </GridPane>
+  </Tab>
+  <Tab text="Звання">
+    <GridPane prefHeight="471.0" prefWidth="617.0">
+      <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+      </columnConstraints>
+      <rowConstraints>
+        <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="60.0"
+          vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+      </rowConstraints>
+      <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+        <opaqueInsets>
+          <Insets/>
+        </opaqueInsets>
+        <GridPane.margin>
+          <Insets left="10.0" right="10.0"/>
+        </GridPane.margin>
+        <TextField fx:id="rankSearchTextField" prefHeight="26.0" prefWidth="200.0"
+          promptText="Звання"/>
+        <Button mnemonicParsing="false" onAction="#onAddRankButtonClicked" text="Додати звання"/>
+        <Button mnemonicParsing="false" onAction="#onRefreshRanksButtonClicked" text="Оновити"/>
+      </HBox>
+      <TableView fx:id="ranksTableView" prefHeight="490.0" prefWidth="1150.0"
+        GridPane.rowIndex="1">
+        <columns>
+          <TableColumn fx:id="rankNameColumn" prefWidth="75.0" text="Звання"/>
+          <TableColumn fx:id="deleteRankColumn" prefWidth="75.0" text="Видалити"/>
         </columns>
       </TableView>
     </GridPane>
